// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `<div />`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className="MuiPaper-root-18 MuiPaper-elevation1-21 MuiPaper-rounded-19 MuiCard-root-17 TournamentRounds-margined-11"
  >
    <div
      className="MuiCardHeader-root-45"
    >
      <div
        className="MuiCardHeader-content-48"
      >
        <span
          className="MuiTypography-root-51 MuiTypography-headline-56 MuiCardHeader-title-49"
        >
          New Players
        </span>
      </div>
    </div>
    <hr
      className="MuiDivider-root-76"
    />
    <div
      className="MuiCardContent-root-80"
    >
      <ul
        className="MuiList-root-81 MuiList-padding-82"
      >
        <div
          className="MuiButtonBase-root-95 MuiListItem-root-85 MuiListItem-default-88 MuiListItem-gutters-92 MuiListItem-button-93"
          id="mock1"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiListItemText-root-98"
          >
            <span
              className="MuiTypography-root-51 MuiTypography-subheading-58 MuiListItemText-primary-101"
            >
              test1
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-104"
          />
        </div>
        <div
          className="MuiButtonBase-root-95 MuiListItem-root-85 MuiListItem-default-88 MuiListItem-gutters-92 MuiListItem-button-93"
          id="mock2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiListItemText-root-98"
          >
            <span
              className="MuiTypography-root-51 MuiTypography-subheading-58 MuiListItemText-primary-101"
            >
              test2
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-104"
          />
        </div>
        <div
          className="MuiButtonBase-root-95 MuiListItem-root-85 MuiListItem-default-88 MuiListItem-gutters-92 MuiListItem-button-93"
          id="mock3"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiListItemText-root-98"
          >
            <span
              className="MuiTypography-root-51 MuiTypography-subheading-58 MuiListItemText-primary-101"
            >
              test3
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-104"
          />
        </div>
      </ul>
    </div>
  </div>
  <div
    className="MuiPaper-root-18 MuiPaper-elevation1-21 MuiPaper-rounded-19 MuiCard-root-17 TournamentRounds-margined-11"
  >
    <div
      className="MuiCardHeader-root-45"
    >
      <div
        className="MuiCardHeader-content-48"
      >
        <span
          className="MuiTypography-root-51 MuiTypography-headline-56 MuiCardHeader-title-49"
        >
          Dropped Players
        </span>
      </div>
    </div>
    <hr
      className="MuiDivider-root-76"
    />
    <div
      className="MuiCardContent-root-80"
    >
      <ul
        className="MuiList-root-81 MuiList-padding-82"
      >
        <li
          className="MuiListItem-container-86"
        >
          <div
            className="MuiButtonBase-root-95 MuiListItem-root-85 MuiListItem-default-88 MuiListItem-gutters-92 MuiListItem-button-93 MuiListItem-secondaryAction-94"
            id="mock0"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="MuiListItemText-root-98"
            >
              <span
                className="MuiTypography-root-51 MuiTypography-subheading-58 MuiListItemText-primary-101"
              >
                test0
              </span>
            </div>
            <span
              className="MuiTouchRipple-root-104"
            />
          </div>
          <div
            className="MuiListItemSecondaryAction-root-111"
          >
            <div>
              <button
                aria-haspopup="true"
                aria-owns={null}
                className="MuiButtonBase-root-95 MuiIconButton-root-113"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-118"
                >
                  <svg
                    aria-describedby={null}
                    aria-hidden="true"
                    className="MuiSvgIcon-root-126 MuiSvgIcon-colorPrimary-127"
                    color={undefined}
                    focusable="false"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    title="Reinstate test0 and add them to a Pod"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-104"
                />
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 3`] = `
<div>
  <div
    className="MuiPaper-root-18 MuiPaper-elevation1-21 MuiPaper-rounded-19 MuiCard-root-17 TournamentRounds-margined-11"
  >
    <div
      className="MuiCardHeader-root-45"
    >
      <div
        className="MuiCardHeader-content-48"
      >
        <span
          className="MuiTypography-root-51 MuiTypography-headline-56 MuiCardHeader-title-49"
        >
          Players
        </span>
      </div>
    </div>
    <hr
      className="MuiDivider-root-76"
    />
    <div
      className="MuiCardContent-root-80"
    >
      <ul
        className="MuiList-root-81 MuiList-padding-82"
      >
        <div
          className="MuiButtonBase-root-95 MuiListItem-root-85 MuiListItem-default-88 MuiListItem-gutters-92 MuiListItem-button-93"
          id="mock1"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiListItemText-root-98"
          >
            <span
              className="MuiTypography-root-51 MuiTypography-subheading-58 MuiListItemText-primary-101"
            >
              test1
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-104"
          />
        </div>
        <div
          className="MuiButtonBase-root-95 MuiListItem-root-85 MuiListItem-default-88 MuiListItem-gutters-92 MuiListItem-button-93"
          id="mock2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiListItemText-root-98"
          >
            <span
              className="MuiTypography-root-51 MuiTypography-subheading-58 MuiListItemText-primary-101"
            >
              test2
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-104"
          />
        </div>
        <div
          className="MuiButtonBase-root-95 MuiListItem-root-85 MuiListItem-default-88 MuiListItem-gutters-92 MuiListItem-button-93"
          id="mock3"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiListItemText-root-98"
          >
            <span
              className="MuiTypography-root-51 MuiTypography-subheading-58 MuiListItemText-primary-101"
            >
              test3
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-104"
          />
        </div>
      </ul>
    </div>
  </div>
  <div
    className="MuiPaper-root-18 MuiPaper-elevation1-21 MuiPaper-rounded-19 MuiCard-root-17 TournamentRounds-margined-11"
  >
    <div
      className="MuiCardHeader-root-45"
    >
      <div
        className="MuiCardHeader-content-48"
      >
        <span
          className="MuiTypography-root-51 MuiTypography-headline-56 MuiCardHeader-title-49"
        >
          Dropped Players
        </span>
      </div>
    </div>
    <hr
      className="MuiDivider-root-76"
    />
    <div
      className="MuiCardContent-root-80"
    >
      <ul
        className="MuiList-root-81 MuiList-padding-82"
      >
        <div
          className="MuiButtonBase-root-95 MuiListItem-root-85 MuiListItem-default-88 MuiListItem-gutters-92 MuiListItem-button-93"
          id="mock0"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiListItemText-root-98"
          >
            <span
              className="MuiTypography-root-51 MuiTypography-subheading-58 MuiListItemText-primary-101"
            >
              test0
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-104"
          />
        </div>
      </ul>
    </div>
  </div>
</div>
`;
